Mixin overhaul, replace accessors with AWs and interfaces
This keeps Mixins from becoming bloated and provides a way for mods to use some API calls from externally.